:lipstick: fix: Add inter font and remove scrollbar style

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -16,26 +16,5 @@
 
   body {
     @apply min-h-screen antialiased bg-base-gray-600 text-base-gray-100;
-  }
-
-  *::-webkit-scrollbar {
-    width: var(4px)
-  }
-
-  *::-webkit-scrollbar-track {
-    background: var(--sb-track-color);
-    border-radius: 9px;
-  }
-
-  *::-webkit-scrollbar-thumb {
-    background: var(--sb-thumb-color);
-    border-radius: 9px;
-  }
-
-  @supports not selector(::-webkit-scrollbar) {
-    * {
-      scrollbar-color: var(--sb-thumb-color)
-                      var(--sb-track-color);
-    }
   }
 }
